# bagua

./: .gitignore  DEVELOPMENT.md  README.md  _run_backend.bat  _run_frontend.bat  launcher.py  start.bat  stop.bat
.github/workflows/: deploy.yml
.mimocode/skills/query-mimocode-db/: SKILL.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: bazi.py  iching.py
backend/app/core/: __init__.py
backend/app/core/bazi/: __init__.py  analysis.py  birthplace.py  chart.py  elements.py  nayin.py  shensha.py  time_correction.py
backend/app/core/data/: __init__.py
backend/app/core/iching/: __init__.py  coin.py  hexagram.py  interpret.py
backend/app/schemas/: __init__.py  models.py
backend/scripts/: build_hexagrams.py
backend/tests/api/: __init__.py  test_api.py
backend/tests/core/: __init__.py  test_bazi.py  test_iching.py  test_time_correction.py
docs/superpowers/specs/: 2026-06-16-bagua-design.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: HexagramFigure.tsx
frontend/src/core/: 64hexagrams.json  bazi.ts  birthplace.ts  iching.ts  time_correction.ts
frontend/src/data/: baziExplain.ts  divineExplain.ts
frontend/src/pages/: BaziPage.tsx  DivinePage.tsx  HistoryPage.tsx
frontend/src/styles/: global.css
frontend/src/utils/: export.ts  history.ts
